--- a/calculate/templates/calculate/detail.html
+++ b/calculate/templates/calculate/detail.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ section }}</title>
-</head>
-<body>
+{% extends "calculate/base.html" %}
+
+{% block title %}
+{{ section }}
+{% endblock %}
+
+{% block content %}
+
     <h1> {{ section }}</h1>
     Percentage: {{ section.percentage }}%
-</body>
-</html>
+
+{% endblock %}
