--- a/calculate/templates/calculate/add.html
+++ b/calculate/templates/calculate/add.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Add Section</title>
-</head>
-<body>
+{% extends "calculate/base.html" %}
 
-</body>
-</html>
+{% load bootstrap3 %}
+
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{% bootstrap_messages %}
+
+{% block title %}
+Add Section
+{% endblock %}
+
+{% block content %}
+
+    {% buttons %}
+    <button type="submit" class="btn btn-primary">
+        {% bootstrap_icon "star" %} Submit
+    </button>
+    {% endbuttons %}
+
+{% endblock %}
