--- a/calculate/templates/calculate/index.html
+++ b/calculate/templates/calculate/index.html
@@ -6,16 +6,33 @@ Calculate
 
 {% block content %}
 
-    <h2></h2><a href="{% url 'calculate:add' %}">Add</a></h2>
-
+    <h2><a href="{% url 'calculate:add' %}">Add</a></h2>
+    <br/>
     {% if section_list %}
-        <ul>
-        {% for section in section_list %}
-            <li><a href="{% url 'calculate:detail' section.id %}">{{ section.section_text }}</a></li>
-        {% endfor %}
-        </ul>
+        <div class="container">
+            {% for section in section_list %}
+            <div class="row">
+                <div class="col">
+                    <a href="{% url 'calculate:detail' section.id %}">{{ section.section_text }}</a>
+                </div>
+                <div class="col">
+                    Add
+                </div>
+                <div class="col">
+                    Delete
+                </div>
+            </div>
+            {% endfor %}
+        </div>
     {% else %}
         <p>No sections are available.</p>
     {% endif %}
+    <br/>
+    <h3>To do</h3>
+    <ul>
+        <li>Add two values to each section (mark/out of)</li>
+        <li>Do delete section function</li>
+        <li>Add section to a section, referenced by foreign key</li>
+    </ul>
 
 {% endblock %}
