--- a/calculate/templates/calculate/base.html
+++ b/calculate/templates/calculate/base.html
@@ -5,19 +5,46 @@
     <title>{% block title %}{% endblock %}</title>
     {% block includes %}{% endblock %}
     {% load staticfiles %}
-    <link rel="stylesheet" href="{% static 'css/' %}"
+    <link rel="stylesheet" href="{% static 'calculate/css/bootstrap.min.css' %}" type="text/css" />
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="{% static 'calculate/css/sticky-footer-navbar.css' %}" type="text/css" />
 </head>
 <body>
-{% block content %}{% endblock %}
+
+<!-- Fixed navbar -->
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#">Fixed navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/calculate/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Test</a>
+            </li>
+            <!-- <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+        </ul>
+        <form class="form-inline mt-2 mt-md-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form> -->
+    </div>
+</nav>
+
+<!-- Begin page content -->
+<div class="container">
+    {% block content %}{% endblock %}
+</div><!-- /.container -->
 
 <!-- Footer -->
-<footer>
+<footer class="footer">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <p>Copyright &copy; Riza Baltazar 2017</p>
-            </div>
-        </div>
+        <span class="text-muted">Copyright &copy; Riza Baltazar 2017</span>
     </div>
 </footer>
 </body>
