--- a/calculate/templates/calculate/detail.html
+++ b/calculate/templates/calculate/detail.html
@@ -7,6 +7,7 @@
 {% block content %}
 
     <h1> {{ section }}</h1>
-    Percentage: {{ section.percentage }}%
+    <p>Percentage: {{ section.percentage }}%</p>
+    <button class="btn btn-info">Edit</button>
 
 {% endblock %}
