--- a/calculate/templates/calculate/index.html
+++ b/calculate/templates/calculate/index.html
@@ -31,8 +31,10 @@ Calculate
     <h3>To do</h3>
     <ul>
         <li>Add two values to each section (mark/out of)</li>
-        <li>Do delete section function</li>
+        <li>Delete section function</li>
+        <li>Edit section function</li>
         <li>Add section to a section, referenced by foreign key</li>
+        <li>Add course model, course can have multiple sections</li>
     </ul>
 
 {% endblock %}
