--- a/calculate/templates/calculate/base.html
+++ b/calculate/templates/calculate/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'calculate/css/bootstrap.min.css' %}" type="text/css" />
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{% static 'calculate/css/sticky-footer-navbar.css' %}" type="text/css" />
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 </head>
 <body>
 
