--- a/calculate/templates/calculate/index.html
+++ b/calculate/templates/calculate/index.html
@@ -6,35 +6,44 @@ Calculate
 
 {% block content %}
 
-    <h2><a href="{% url 'calculate:add' %}">Add</a></h2>
+    <h2><a href="{% url 'calculate:add_course' %}">Add Course</a></h2>
     <br/>
-    {% if section_list %}
+    {% if course_list %}
         <div class="container">
-            {% for section in section_list %}
+            {% for course in course_list %}
             <div class="row">
-                <div class="col">
-                    <a href="{% url 'calculate:detail' section.id %}">{{ section.section_text }}</a>
+                <div class="col col-12 col-sm-6 col-md-8">
+                    {{ course.course_text }}
                 </div>
                 <div class="col">
-                    Add
+                    <a class="btn btn-primary" href="{% url 'calculate:course_details' course.id %}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    </a>
                 </div>
                 <div class="col">
-                    Delete
+                    <a class="btn btn-danger" href="{% url 'calculate:delete_course' course.id %}" method="POST">
+                        {% csrf_token %}
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </a>
                 </div>
             </div>
             {% endfor %}
         </div>
     {% else %}
-        <p>No sections are available.</p>
+        <p>No courses are available.</p>
     {% endif %}
     <br/>
     <h3>To do</h3>
     <ul>
-        <li>Add two values to each section (mark/out of)</li>
-        <li>Delete section function</li>
-        <li>Edit section function</li>
+        <li><strike>Add two values to each section (mark/out of)</strike> (created a Mark model instead)</li>
+        <li><strike>Add course model, course can have multiple sections</strike></li>
+        <li><strike>Delete section function</strike></li>
+        <li>Edit section, course and mark functions</li>
         <li>Add section to a section, referenced by foreign key</li>
-        <li>Add course model, course can have multiple sections</li>
+        <li>Add section to a course, referenced by foreign key</li>
+        <li>Add mark to a section, referenced by foreign key</li>
+        <li>Create mark page</li>
+        <li>Do logic for percentage and mark calculations</li>
     </ul>
 
 {% endblock %}
