--- a/calculate/templates/calculate/index.html
+++ b/calculate/templates/calculate/index.html
@@ -16,6 +16,7 @@ Calculate
                     {{ course.course_text }}
                 </div>
                 <div class="col">
+                    <!-- course.id -->
                     <a class="btn btn-primary" href="{% url 'calculate:course_details' course.id %}">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </a>
