--- a/calculate/templates/calculate/index.html
+++ b/calculate/templates/calculate/index.html
@@ -39,12 +39,12 @@ Calculate
         <li><strike>Add two values to each section (mark/out of)</strike> (created a Mark model instead)</li>
         <li><strike>Add course model, course can have multiple sections</strike></li>
         <li><strike>Delete section function</strike></li>
-        <li>Edit section, course and mark functions</li>
-        <li>Add section to a section, referenced by foreign key</li>
-        <li>Add section to a course, referenced by foreign key</li>
-        <li>Add mark to a section, referenced by foreign key</li>
+        <li><strike>Add section to a section, referenced by foreign key</strike></li>
+        <li><strike>Add section to a course, referenced by foreign key</strike></li>
+        <li>Add assignment to a section, referenced by foreign key</li>
+        <li>Edit section, course and assignment functions</li>
+        <li>Do logic for percentage and assignment calculations</li>
         <li>Create mark page</li>
-        <li>Do logic for percentage and mark calculations</li>
     </ul>
 
 {% endblock %}
