--- a/calculate/templates/calculate/section_confirm_delete.html
+++ b/calculate/templates/calculate/section_confirm_delete.html
@@ -1,6 +1,6 @@
 <div class="modal fade">
     <form action="" method="post">{% csrf_token %}
-        <p>Are you sure you want to delete "{{ object }}"?</p>
+        <p>Are you sure you want to delete section "{{ object }}"?</p>
         <input type="submit" value="Confirm" />
     </form>
 </div>
