--- a/calculate/templates/calculate/section_details.html
+++ b/calculate/templates/calculate/section_details.html
@@ -12,4 +12,30 @@
 
     <h2><a href="{% url 'calculate:add_section' section.type section.id %}">Add Section</a></h2>
 
+    <br/>
+    {% if section_list %}
+    <div class="container">
+        {% for section in section_list %}
+        <div class="row">
+            <div class="col col-12 col-sm-6 col-md-8">
+                {{ section.section_text }}
+            </div>
+            <div class="col">
+                <a class="btn btn-primary" href="{% url 'calculate:section_details' section.id %}">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </a>
+            </div>
+            <div class="col">
+                <a class="btn btn-danger" href="{% url 'calculate:delete_section' section.id %}" method="POST">
+                    {% csrf_token %}
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    {% else %}
+    <p>No sections are available.</p>
+    {% endif %}
+
 {% endblock %}
