--- a/calculate/templates/calculate/add_course.html
+++ b/calculate/templates/calculate/add_course.html
@@ -5,11 +5,12 @@ Add Course
 {% endblock %}
 
 {% block content %}
+
     <h1>Add Course</h1>
     <form action="{% url 'calculate:add_course' %}" method="POST">
         {% csrf_token %}
-        <input type="text" name="course_text" id="course_text" value="" />
-        <input type="text" name="course_code" id="course_code" value="" />
+        Name: <input type="text" name="course_text" id="course_text" value="" /><br/>
+        Course Code: <input type="text" name="course_code" id="course_code" value="" /><br/>
         <input type="submit" name="submit" value="Add Course" class="btn btn-primary" />
     </form>
 
