--- a/calculate/templates/calculate/section_details.html
+++ b/calculate/templates/calculate/section_details.html
@@ -10,9 +10,9 @@
     <p>Percentage: {{ section.percentage }}%</p>
     <button class="btn btn-info">Edit</button>
 
-    <h2><a href="{% url 'calculate:add_section' section.type section.id %}">Add Section</a></h2>
-
     <br/>
+    <h2>Sections</h2>
+    <h4><a href="{% url 'calculate:add_section' section.type section.id %}">Add section</a></h4>
     {% if section_list %}
     <div class="container">
         {% for section in section_list %}
@@ -36,6 +36,33 @@
     </div>
     {% else %}
     <p>No sections are available.</p>
+    {% endif %}
+
+    <h2>Assignments</h2>
+    <h4><a href="{% url 'calculate:add_assignment' section.id %}">Add assignment</a></h4>
+    {% if assignment_list %}
+    <div class="container">
+        {% for assignment in assignment_list %}
+        <div class="row">
+            <div class="col col-12 col-sm-6 col-md-8">
+                {{ assignment.assignment_name }}
+            </div>
+            <div class="col">
+                <a class="btn btn-primary" href="{% url 'calculate:assignment_details' assignment.id %}">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </a>
+            </div>
+            <div class="col">
+                <a class="btn btn-danger" href="{% url 'calculate:delete_assignment' assignment.id %}" method="POST">
+                    {% csrf_token %}
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    {% else %}
+    <p>No assignments are available.</p>
     {% endif %}
 
 {% endblock %}
