--- a/calculate/templates/calculate/assignment_form.html
+++ b/calculate/templates/calculate/assignment_form.html
@@ -9,10 +9,11 @@ Add Assignment
     <h1>Add Assignment</h1>
     <form action="{% url 'calculate:add_assignment' pk %}" method="POST">
         {% csrf_token %}
-        Assignment name: <input type="text" name="assignment_name" id="assignment_name" value="" /><br/>
+        <!-- Assignment name: <input type="text" name="assignment_name" id="assignment_name" value="" /><br/>
         Mark: <input type="number" name="mark" id="mark" value="" />
         / <input type="number" name="total" id="total" value="" /><br/>
-        Weight: <input type="number" name="percentage" id="percentage" value="" /><br/>
+        Weight: <input type="number" name="percentage" id="percentage" value="" /><br/> -->
+        {{form.as_p}}
         <input type="submit" name="submit" value="Add Assignment" class="btn btn-primary" />
     </form>
 
