--- a/calculate/templates/calculate/course_detail.html
+++ b/calculate/templates/calculate/course_detail.html
@@ -7,12 +7,12 @@
 {% block content %}
 
     <h1> {{ course }}</h1>
-    <button class="btn btn-info">Edit</button>
+    <a href="{% url 'calculate:update_course' course.id %}" class="btn btn-info">Edit</a>
     <p>Course code: {{ course.course_code }}</p>
     <br/>
-    <h2><a href="{% url 'calculate:add_section' course.type course.id %}">Add Section</a></h2>
-    <br/>
     {% if section_list %}
+    <h2><a href="{% url 'calculate:add_section' course.atype course.id %}">Add Section</a></h2>
+    <br/>
     <div class="container">
         {% for section in section_list %}
         <div class="row">
@@ -20,7 +20,7 @@
                 {{ section.section_text }}
             </div>
             <div class="col">
-                <a class="btn btn-primary" href="{% url 'calculate:section_details' section.id %}">
+                <a class="btn btn-primary" href="{% url 'calculate:section_detail' section.id %}">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 </a>
             </div>
