--- a/calculate/templates/calculate/course_form.html
+++ b/calculate/templates/calculate/course_form.html
@@ -9,8 +9,7 @@ Add Course
     <h1>Add Course</h1>
     <form action="{% url 'calculate:add_course' %}" method="POST">
         {% csrf_token %}
-        Name: <input type="text" name="course_text" id="course_text" value="" /><br/>
-        Course Code: <input type="text" name="course_code" id="course_code" value="" /><br/>
+        {{ form.as_p }}
         <input type="submit" name="submit" value="Add Course" class="btn btn-primary" />
     </form>
 
