--- a/calculate/templates/calculate/index.html
+++ b/calculate/templates/calculate/index.html
@@ -17,7 +17,7 @@ Calculate
                 </div>
                 <div class="col">
                     <!-- course.id -->
-                    <a class="btn btn-primary" href="{% url 'calculate:course_details' course.id %}">
+                    <a class="btn btn-primary" href="{% url 'calculate:course_detail' course.id %}">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </a>
                 </div>
