--- a/calculate/templates/calculate/section_detail.html
+++ b/calculate/templates/calculate/section_detail.html
@@ -8,11 +8,11 @@
 
     <h1> {{ section }}</h1>
     <p>Percentage: {{ section.percentage }}%</p>
-    <button class="btn btn-info">Edit</button>
+    <a href="{% url 'calculate:update_section' section.id %}" class="btn btn-info">Edit</a>
 
     <br/>
     <h2>Sections</h2>
-    <h4><a href="{% url 'calculate:add_section' section.type section.id %}">Add section</a></h4>
+    <h4><a href="{% url 'calculate:add_section' section.atype section.id %}">Add section</a></h4>
     {% if section_list %}
     <div class="container">
         {% for section in section_list %}
@@ -21,7 +21,7 @@
                 {{ section.section_text }}
             </div>
             <div class="col">
-                <a class="btn btn-primary" href="{% url 'calculate:section_details' section.id %}">
+                <a class="btn btn-primary" href="{% url 'calculate:section_detail' section.id %}">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 </a>
             </div>
@@ -48,7 +48,7 @@
                 {{ assignment.assignment_name }}
             </div>
             <div class="col">
-                <a class="btn btn-primary" href="{% url 'calculate:assignment_details' assignment.id %}">
+                <a class="btn btn-primary" href="{% url 'calculate:assignment_detail' assignment.id %}">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 </a>
             </div>
