--- a/calculate/templates/calculate/base.html
+++ b/calculate/templates/calculate/base.html
@@ -6,15 +6,19 @@
     {% block includes %}{% endblock %}
     {% load staticfiles %}
     <link rel="stylesheet" href="{% static 'calculate/css/bootstrap.min.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'calculate/css/bootstrap-treeview.css' %}" type="text/css" />
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{% static 'calculate/css/sticky-footer-navbar.css' %}" type="text/css" />
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+
+    <script src="{% static 'calculate/js/jquery.js' %}"></script>
+    <script src="{% static 'calculate/js/bootstrap-treeview.js' %}"></script>
 </head>
 <body>
 
 <!-- Fixed navbar -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Fixed navbar</a>
+    <a class="navbar-brand" href="#">Calculate Grades</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
