--- a/calculate/templates/calculate/course_form.html
+++ b/calculate/templates/calculate/course_form.html
@@ -5,12 +5,25 @@ Add Course
 {% endblock %}
 
 {% block content %}
+{% load crispy_forms_tags %}
 
-    <h1>Add Course</h1>
-    <form action="{% url 'calculate:add_course' %}" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="submit" value="Add Course" class="btn btn-primary" />
-    </form>
+<div class="modal-dialog modal-lg">
+    <div class="modal-content">
+        <form action="{% url 'calculate:add_course' %}" method="POST">
+            {% csrf_token %}
+            <div class="modal-header">
+            <a type="button" class="close button" data-dismiss="modal" aria-hidden="true"
+               href="{% url 'calculate:index' %}">×</a>
+            <h4 class="modal-title" id="section-modal-label">Add Course</h4>
+        </div>
+            <div class="modal-body">
+                {{form.as_p}}
+            </div>
+            <div class="modal-footer">
+                <input type="submit" name="submit" value="Add Course" />
+            </div>
+        </form>
+    </div>
+</div>
 
 {% endblock %}
