--- a/calculate/templates/calculate/section_update_form.html
+++ b/calculate/templates/calculate/section_update_form.html
@@ -1,10 +1,25 @@
-{% extends "calculate/base.html" %}
+{% extends 'calculate/base.html' %}
 
 {% block content %}
+{% load crispy_forms_tags %}
 
-<form action="" method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Update" />
-</form>
+<div class="modal-dialog modal-lg">
+    <div class="modal-content">
+        <form action="" method="post">
+            {% csrf_token %}
+            <div class="modal-header">
+                <a type="button" class="close button" data-dismiss="modal" aria-hidden="true"
+                        href="{% url 'calculate:course_detail' section.section_course.id %}">×</a>
+                <h4 class="modal-title" id="section-modal-label">Update {{ section.section_name }}</h4>
+            </div>
+            <div class="modal-body">
+                {{ form.as_p }}
+            </div>
+            <div class="modal-footer">
+                <input type="submit" value="Update" />
+            </div>
+        </form>
+    </div>
+</div>
 
-{% endblock %}
+{% endblock content %}
