--- a/calculations/templates/calculations/assignment_form.html
+++ b/calculations/templates/calculations/assignment_form.html
@@ -1,7 +1,7 @@
-{% extends "calculate/base.html" %}
+{% extends "calculations/base.html" %}
 
 {% block title %}
-Add Section
+Add Assignment
 {% endblock %}
 
 {% block content %}
@@ -9,18 +9,18 @@ Add Section
 
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
-        <form action="{% url 'calculate:add_section' s_type pk %}" method="POST">
+        <form action="{% url 'calculations:add_assignment' is_section pk %}" method="POST">
             {% csrf_token %}
             <div class="modal-header">
                 <a type="button" class="close button" data-dismiss="modal" aria-hidden="true"
-                   href="{% url 'calculate:course_detail' course.id %}">×</a>
-                <h4 class="modal-title" id="section-modal-label">Add Section</h4>
+                   href="{% url 'calculations:view_course' pk %}">×</a>
+                <h4 class="modal-title" id="section-modal-label">Add Assignment to {{ course }}</h4>
             </div>
             <div class="modal-body">
                 {{form.as_p}}
             </div>
             <div class="modal-footer">
-                <input type="submit" name="submit" value="Add Section" />
+                <input type="submit" name="submit" value="Add Assignment" />
             </div>
         </form>
     </div>
