--- a/calculations/templates/calculations/course_detail.html
+++ b/calculations/templates/calculations/course_detail.html
@@ -1,4 +1,4 @@
-{% extends "calculate/base.html" %}
+{% extends "calculations/base.html" %}
 
 {% block title %}
 {{ course }}
@@ -19,39 +19,39 @@
      aria-hidden="true">
 </div><!-- / .modal -->
 
-<h3><a href="{% url 'calculate:add_section' course.atype course.id %}">Add Section</a></h3>
+<h3><a href="{% url 'calculations:add_assignment' 0 course.id %}">Add Assignment</a></h3>
 
-{% if section_list %}
+{% if assignment_list %}
 <br/>
 <div class="container">
     <div class="row" style="background-color: #f0f0f0;">
         <div class="col col-12 col-sm-6 col-md-8">
-            Section
+            Assignment
         </div>
         <div class="col">%</div>
         <div class="col">Edit</div>
         <div class="col">Delete</div>
     </div>
-    {% for section in section_list %}
+    {% for assignment in assignment_list %}
     <div class="row">
         <div class="col col-12 col-sm-6 col-md-8">
-            {{ section.section_name }}
+            {{ assignment.assignment_name }}
         </div>
         <div class="col">
-            {{ section.percentage }}
+            {{ assignment.percentage }}
         </div>
         <div class="col">
             <a data-toggle="modal"
-               data-target="#section-modal"
+               data-target="#assignment-modal"
                title="edit section"
                data-tooltip=""
                class="btn btn-primary"
-               href="{% url 'calculate:update_section' section.id %}">
+               href="{% url 'calculations:update_assignment' assignment.id %}">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             </a>
         </div>
         <div class="col">
-            <a class="btn btn-danger" href="{% url 'calculate:delete_section' section.id %}" method="POST">
+            <a class="btn btn-danger" href="{% url 'calculations:delete_assignment' assignment.id %}" method="POST">
                 {% csrf_token %}
                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
             </a>
@@ -60,7 +60,7 @@
     {% endfor %}
 </div>
 {% else %}
-<p>No sections are available.</p>
+<p>No assignments are available.</p>
 {% endif %}
 
 <br/>
