--- a/calculations/templates/calculations/index.html
+++ b/calculations/templates/calculations/index.html
@@ -1,4 +1,4 @@
-{% extends "calculate/base.html" %}
+{% extends "calculations/base.html" %}
 
 {% block title %}
 Calculate
@@ -6,24 +6,24 @@ Calculate
 
 {% block content %}
 
-    <h4><a href="{% url 'calculate:add_course' %}">Add course</a></h4>
+    <h4><a href="{% url 'calculations:add_course' %}">Add course</a></h4>
     <br/>
     {% if course_list %}
         <div class="container">
             {% for course in course_list %}
             <div class="row">
                 <div class="col col-12 col-sm-6 col-md-8">
-                    <a href="{% url 'calculate:course_detail' course.id %}">
+                    <a href="{% url 'calculations:view_course' course.id %}">
                     {{ course.course_name }}
                     </a>
                 </div>
                 <div class="col">
-                    <a class="btn btn-primary" href="{% url 'calculate:update_course' course.id %}">
+                    <a class="btn btn-primary" href="{% url 'calculations:update_course' course.id %}">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </a>
                 </div>
                 <div class="col">
-                    <a class="btn btn-danger" href="{% url 'calculate:delete_course' course.id %}" method="POST">
+                    <a class="btn btn-danger" href="{% url 'calculations:delete_course' course.id %}" method="POST">
                         {% csrf_token %}
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                     </a>
