--- a/calculations/templates/calculations/assignment_view.html
+++ b/calculations/templates/calculations/assignment_view.html
@@ -1,10 +1,10 @@
-{% extends "calculations/base.html" %}
+{% extends "calculations/index.html" %}
 
 {% block title %}
 {{ assignment }}
 {% endblock %}
 
-{% block content %}
+{% block main %}
 
 <h1> {{ assignment }}</h1>
 <p>Mark: {{ assignment.mark }} / {{ assignment.total }}</p>
