--- a/calculations/templates/calculations/assignment_update_form.html
+++ b/calculations/templates/calculations/assignment_update_form.html
@@ -1,6 +1,7 @@
-{% extends "calculations/base.html" %}
+{% extends "calculations/index.html" %}
+{% load staticfiles %}
 
-{% block content %}
+{% block main %}
 {% load crispy_forms_tags %}
 
 <div class="modal-dialog modal-lg">
@@ -13,13 +14,20 @@
                 <h4 class="modal-title" id="section-modal-label">Update Assignment</h4>
             </div>
             <div class="modal-body">
-                {{form.as_p}}
+                {{ form.as_p }}
             </div>
             <div class="modal-footer">
+
                 <input type="submit" name="submit" value="Update Assignment" />
             </div>
         </form>
     </div>
 </div>
+
+{% endblock %}
+
+{% block javascript %}
+
+<script src="{% static 'calculations/js/assignment_form.js' %}"></script>
 
 {% endblock %}
