--- a/calculations/templates/calculations/base.html
+++ b/calculations/templates/calculations/base.html
@@ -8,55 +8,44 @@
     <link rel="stylesheet" href="{% static 'calculations/css/bootstrap.min.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'calculations/css/bootstrap-treeview.css' %}" type="text/css" />
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="{% static 'calculations/css/sticky-footer-navbar.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'calculations/css/dashboard.css' %}" type="text/css" />
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" href="#">Dashboard</a>
+            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/calculations/">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Settings</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Help</a>
+                    </li>
+                </ul>
+                <form class="form-inline mt-2 mt-md-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+    </header>
+
+    {% block content %}{% endblock %}
 
     <script src="{% static 'calculations/js/jquery.js' %}"></script>
     <script src="{% static 'calculations/js/bootstrap-treeview.js' %}"></script>
-</head>
-<body>
-
-<!-- Fixed navbar -->
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Calculate Grades</a>
-    <button class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarCollapse"
-            aria-controls="navbarCollapse"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/calculations/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Test</a>
-            </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-        </ul>
-        <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
-    </div>
-</nav>
-
-<!-- Begin page content -->
-<div class="container">
-    {% block content %}{% endblock %}
-</div><!-- /.container -->
-
-<!-- Footer -->
-<footer class="footer">
-    <div class="container">
-        <span class="text-muted">Copyright &copy; Riza Baltazar 2017</span>
-    </div>
-</footer>
+    {% block javascript %}{% endblock %}
 </body>
 </html>
