--- a/calculations/templates/calculations/course_detail.html
+++ b/calculations/templates/calculations/course_detail.html
@@ -1,63 +1,103 @@
-{% extends "calculations/base.html" %}
+{% extends "calculations/index.html" %}
 
 {% block title %}
 {{ course }}
 {% endblock %}
 
-{% block content %}
+{% block main %}
+<h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                 {{ course }}
+            </div>
 
-<h1> {{ course }}</h1>
+            <div class="col pull-right">
+                <a href="{% url 'calculations:update_course' course.id %}"
+                   class="btn btn-default" title="Edit Course">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </a>
+
+                <a href="{% url 'calculations:delete_course' course.id %}"
+                   class="btn btn-default" title="Delete Course" method="POST">
+                    {% csrf_token %}
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </a>
+
+                <a href="{% url 'calculations:add_assignment' 0 course.id %}"
+                   class="btn btn-default" title="Add Assignment">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                </a>
+            </div>
+        </div>
+    </div>
+</h1>
+
+<br/>
 <p>Course code: {{ course.course_code }}</p>
+
+{% if section_list %}
 <br/>
-
-<!--  Modal -->
-<div class="modal fade"
-     id="section-modal"
-     tabindex="-1"
-     role="dialog"
-     aria-labelledby="section-modal-label"
-     aria-hidden="true">
-</div><!-- / .modal -->
-
-<h3><a href="{% url 'calculations:add_assignment' 0 course.id %}">Add Assignment</a></h3>
-
-{% if assignment_list %}
-<br/>
-<div class="container">
-    <div class="row" style="background-color: #f0f0f0;">
-        <div class="col col-12 col-sm-6 col-md-8">
-            Assignment
-        </div>
-        <div class="col">%</div>
-        <div class="col">Edit</div>
-        <div class="col">Delete</div>
-    </div>
-    {% for assignment in assignment_list %}
-    <div class="row">
-        <div class="col col-12 col-sm-6 col-md-8">
-            {{ assignment.assignment_name }}
-        </div>
-        <div class="col">
-            {{ assignment.percentage }}
-        </div>
-        <div class="col">
-            <a data-toggle="modal"
-               data-target="#assignment-modal"
-               title="edit section"
-               data-tooltip=""
-               class="btn btn-primary"
-               href="{% url 'calculations:update_assignment' assignment.id %}">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            </a>
-        </div>
-        <div class="col">
-            <a class="btn btn-danger" href="{% url 'calculations:delete_assignment' assignment.id %}" method="POST">
-                {% csrf_token %}
-                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-            </a>
-        </div>
-    </div>
-    {% endfor %}
+<h2>Assignment Mark Distribution</h2>
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Edit</th>
+                <th>Delete</th>
+                <th>Assignments</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for section in section_list %}
+            <tr>
+                <td>
+                    {{ section.assignment_name }} {{ section.percentage }}%
+                </td>
+                <td>
+                    <a href="{% url 'calculations:update_assignment' section.id %}"
+                       class="btn btn-default" title="Edit {{ section.assignment_name }}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    </a>
+                </td>
+                <td>
+                    <a href="{% url 'calculations:delete_assignment' section.id %}"
+                       class="btn btn-default" method="POST" title="Delete {{ section.assignment_name }}">
+                        {% csrf_token %}
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </a>
+                </td>
+                <td>
+                    <table>
+                        {% if assignment_list %}
+                        {% for assignment in assignment_list %}
+                        <tr>
+                            <td>
+                                {{ assignment.assignment_name }} {{ assignment.percentage }}%
+                            </td>
+                            <td>
+                                <a href="{% url 'calculations:update_assignment' assignment.id %}"
+                                   class="btn btn-default" title="Edit {{ assignment.assignment_name }}">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </a>
+                            </td>
+                            <td>
+                                <a href="{% url 'calculations:delete_assignment' assignment.id %}"
+                                   class="btn btn-default" title="Delete {{ assignment.assignment_name }}" method="POST">
+                                    {% csrf_token %}
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        {% endif %}
+                    </table>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 </div>
 {% else %}
 <p>No assignments are available.</p>
@@ -65,9 +105,15 @@
 
 <br/>
 
+<!--
 <div id="tree">
 
 </div>
+-->
+
+{% endblock %}
+
+{% block javascript %}
 
 <script>
 var tree = [
