--- a/calculations/templates/calculations/course_form.html
+++ b/calculations/templates/calculations/course_form.html
@@ -1,10 +1,10 @@
-{% extends "calculations/base.html" %}
+{% extends "calculations/index.html" %}
 
 {% block title %}
 Add Course
 {% endblock %}
 
-{% block content %}
+{% block main %}
 {% load crispy_forms_tags %}
 
 <div class="modal-dialog modal-lg">
@@ -17,7 +17,7 @@ Add Course
                 <h4 class="modal-title" id="section-modal-label">Add Course</h4>
             </div>
             <div class="modal-body">
-                {{form.as_p}}
+                {{ form.as_p }}
             </div>
             <div class="modal-footer">
                 <input type="submit" name="submit" value="Add Course" />
