--- a/calculations/templates/calculations/course_update_form.html
+++ b/calculations/templates/calculations/course_update_form.html
@@ -1,6 +1,6 @@
-{% extends "calculations/base.html" %}
+{% extends "calculations/index.html" %}
 
-{% block content %}
+{% block main %}
 {% load crispy_forms_tags %}
 
 <div class="modal-dialog modal-lg">
@@ -10,10 +10,10 @@
             <div class="modal-header">
                 <a type="button" class="close button" data-dismiss="modal" aria-hidden="true"
                    href="{% url 'calculations:view_course' course.id %}">×</a>
-                <h4 class="modal-title" id="section-modal-label">Update {{ course.course_text }}</h4>
+                <h4 class="modal-title" id="section-modal-label">Update {{ course.course_name }}</h4>
             </div>
             <div class="modal-body">
-                {{form.as_p}}
+                {{ form.as_p }}
             </div>
             <div class="modal-footer">
                 <input type="submit" name="submit" value="Save" />
