--- a/calculations/templates/calculations/index.html
+++ b/calculations/templates/calculations/index.html
@@ -6,6 +6,29 @@ Calculate
 
 {% block content %}
 
+<!-- Begin content page -->
+<div class="container-fluid">
+    <div class="row">
+        <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+            <ul class="nav nav-pills flex-column">
+                <li class="nav-item"><a class="nav-link" href="{% url 'calculations:add_course' %}">Add course</a></li>
+                {% if course_list %}
+                {% for course in course_list %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'calculations:view_course' course.id %}">{{ course.course_name }}</a></li>
+                {% endfor %}
+                {% else %}
+                <li class="nav-item"><a class="nav-link">No courses are available.</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+        <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
+            {% block main %}{% endblock %}
+        </main>
+    </div>
+</div><!-- /.container -->
+
+
+<!--
     <h4><a href="{% url 'calculations:add_course' %}">Add course</a></h4>
     <br/>
     {% if course_list %}
@@ -34,5 +57,5 @@ Calculate
     {% else %}
         <p>No courses are available.</p>
     {% endif %}
-
+-->
 {% endblock %}
