:ok_hand: We did it!
When choosing a course from the course dropdown, the assignment
dropdowns should only show the assignments associated with that course
that are sections.

--- a/calculations/templates/calculations/assignment_form.html
+++ b/calculations/templates/calculations/assignment_form.html
@@ -10,7 +10,7 @@ Add Assignment
 
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
-        <form action="{% url 'calculations:add_assignment' is_section pk %}" method="POST">
+        <form action="{% url 'calculations:add_assignment' is_section pk %}" data-update-assignment-list-url="{% url 'calculations:update_assignment_list' %}" method="POST">
             {% csrf_token %}
             <div class="modal-header">
                 <a type="button" class="close button" data-dismiss="modal" aria-hidden="true"
