:fire: Started working on percentage logic
Getting a pretty good handle on ajax and django stuff

--- a/calculations/templates/calculations/assignment_form.html
+++ b/calculations/templates/calculations/assignment_form.html
@@ -10,7 +10,10 @@ Add Assignment
 
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
-        <form action="{% url 'calculations:add_assignment' is_section pk %}" data-update-assignment-list-url="{% url 'calculations:update_assignment_list' %}" method="POST">
+        <form action="{% url 'calculations:add_assignment' is_section pk %}"
+              data-update-assignment-list-url="{% url 'calculations:update_assignment_list' %}"
+              data-check-percent-url="{% url 'calculations:check_percentages' %}"
+              method="POST" id="assignment_form">
             {% csrf_token %}
             <div class="modal-header">
                 <a type="button" class="close button" data-dismiss="modal" aria-hidden="true"
