--- a/calculations/templates/calculations/course_detail.html
+++ b/calculations/templates/calculations/course_detail.html
@@ -1,4 +1,5 @@
 {% extends "calculations/index.html" %}
+{% load staticfiles %}
 
 {% block title %}
 {{ course }}
@@ -44,6 +45,7 @@
         <thead>
             <tr>
                 <th>Name</th>
+                <th>%</th>
                 <th>Edit</th>
                 <th>Delete</th>
                 <th>Assignments</th>
@@ -52,8 +54,11 @@
         <tbody>
         {% for section in section_list %}
             <tr>
+                <td id="section_name_{{ forloop.counter }}">
+                    {{ section.assignment_name }}
+                </td>
                 <td>
-                    {{ section.assignment_name }} {{ section.percentage }}%
+                    {{ section.percentage }}
                 </td>
                 <td>
                     <a href="{% url 'calculations:update_assignment' section.id %}"
@@ -69,30 +74,10 @@
                     </a>
                 </td>
                 <td>
-                    <table>
-                        {% if assignment_list %}
-                        {% for assignment in assignment_list %}
-                        <tr>
-                            <td>
-                                {{ assignment.assignment_name }} {{ assignment.percentage }}%
-                            </td>
-                            <td>
-                                <a href="{% url 'calculations:update_assignment' assignment.id %}"
-                                   class="btn btn-default" title="Edit {{ assignment.assignment_name }}">
-                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                </a>
-                            </td>
-                            <td>
-                                <a href="{% url 'calculations:delete_assignment' assignment.id %}"
-                                   class="btn btn-default" title="Delete {{ assignment.assignment_name }}" method="POST">
-                                    {% csrf_token %}
-                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                </a>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                        {% endif %}
-                    </table>
+                    <button class="btn btn-default" id="view_assignment_{{ forloop.counter }}"
+                       data-view-assignment="{% url 'calculations:view_assignments' %}">
+                        View Assignments
+                    </button>
                 </td>
             </tr>
         {% endfor %}
@@ -100,57 +85,40 @@
     </table>
 </div>
 {% else %}
-<p>No assignments are available.</p>
+<p>No Sections are available.</p>
 {% endif %}
 
-<br/>
-
-<!--
-<div id="tree">
-
-</div>
--->
+{% if assignment_list %}
+<table>
+    {% for assignment in assignment_list %}
+    <tr>
+        <td>
+            {{ assignment.assignment_name }} {{ assignment.percentage }}%
+        </td>
+        <td>
+            <a href="{% url 'calculations:update_assignment' assignment.id %}"
+               class="btn btn-default" title="Edit {{ assignment.assignment_name }}">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </a>
+        </td>
+        <td>
+            <a href="{% url 'calculations:delete_assignment' assignment.id %}"
+               class="btn btn-default" title="Delete {{ assignment.assignment_name }}" method="POST">
+                {% csrf_token %}
+                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+            </a>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
+{% else %}
+<p>No assignments are available.</p>
+{% endif %}
 
 {% endblock %}
 
 {% block javascript %}
 
-<script>
-var tree = [
-{
-    text: "Parent 1",
-    nodes: [
-      {
-        text: "Child 1",
-        nodes: [
-          {
-            text: "Grandchild 1"
-          },
-          {
-            text: "Grandchild 2"
-          }
-        ]
-      },
-      {
-        text: "Child 2"
-      }
-    ]
-    },
-    {
-    text: "Parent 2"
-    },
-    {
-    text: "Parent 3"
-    },
-    {
-    text: "Parent 4"
-    },
-    {
-    text: "Parent 5"
-    }
-];
-
-$('#tree').treeview({data: tree});
-</script>
+<script src="{% static 'calculations/js/course_detail.js' %}"></script>
 
 {% endblock %}
